feat: adding the ability of add posts and list user posts
